# asio

./: .clang-uml  CMakeLists.txt  build.jam  create_class_diagram.sh  index.html
.github/workflows/: ci.yml
doc/: Jamfile.v2  asio.qbk  boost_asio.puml  design.qbk  examples.qbk  history.qbk  index.xml  net_ts.qbk  noncopyable_dox.txt  overview.qbk  platform_macros.pl  platform_macros.qbk  quickref.xml  reference.dox  reference.qbk  reference.xsl  requirements.qbk  std_exception_dox.txt  std_executors.qbk  tutorial.dox  tutorial.qbk  tutorial.xsl  using.qbk
doc/Attic/: requirements.qbk
doc/design/: allocation.qbk  async.qbk  buffers.qbk  eof.qbk  implementation.qbk  line_based.qbk  rationale.qbk  threads.qbk
doc/overview/: Makefile  allocation.qbk  async.qbk  (+44 more)
example/cpp11/http/server/: CMakeLists.txt  Jamfile  Jamfile.v2  connection.cpp  connection.hpp  main.cpp  reply.cpp  reply.hpp  server.cpp  server.hpp
meta/: libraries.json
test/: CMakeLists.txt  Jamfile  Jamfile.v2  any_completion_executor.cpp  any_completion_handler.cpp  any_io_executor.cpp  append.cpp  as_tuple.cpp  associated_allocator.cpp  associated_cancellation_slot.cpp  associated_executor.cpp  associated_immediate_executor.cpp  associator.cpp  async_result.cpp  awaitable.cpp  basic_datagram_socket.cpp  basic_datagram_socket_test.cpp  basic_deadline_timer.cpp  basic_file.cpp  basic_random_access_file.cpp  basic_raw_socket.cpp  basic_readable_pipe.cpp  basic_resolver_test.cpp  basic_seq_packet_socket.cpp  basic_serial_port.cpp  basic_signal_set.cpp  basic_socket.cpp  basic_socket_acceptor.cpp  basic_strand_test.cpp  basic_stream_file.cpp  basic_stream_socket.cpp  basic_streambuf.cpp  basic_waitable_timer.cpp  basic_writable_pipe.cpp  bind_allocator.cpp  bind_cancellation_slot.cpp  bind_executor.cpp  bind_immediate_executor.cpp  buffer.cpp  buffer_registration.cpp  (+103 more)
tools/: handlerlive.pl  handlertree.pl  handlerviz.pl
(+1723 files in other folders)
